Fix map width on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -171,7 +171,7 @@ header {
     background: url("../images/dedge_greeng.svg") repeat-x center bottom;
     @include tileable();
   }
-  #map {height: 600px;}
+  #map {height: 600px; width: 100%;}
 }
 
 footer {
